[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-center"
authors = [
    { name = "mikigo", email = "1964191531@qq.com" },
]
description = "image-center"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyscreenshot",
    "pillow"
]


dynamic = ["version"]

[project.optional-dependencies]

test = [
    "pytest",
]

doc = ["mkdocs-material"]

[tool.hatch.version]
path = "image_center/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/image_center",
    "/README.md",
]

[project.urls]
Source = "https://github.com/funny-dream/image-center"
Documentation = "https://funny-dream.github.io/image-center"
